@@ -1,4 +1,5 @@
 0.03
+ - Update Module::Install to 1.19 version.
 
 0.02 2015-09-28T19:56:27+02:00
  - Fix LICENSE file.
